--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "watcher",
   "version": "1.0.0",
-  "description": "Simple pub/sub pattern implementation",
+  "description": "",
   "main": "watcher.js",
   "scripts": {
     "test": "grunt test"
